# steel_detection

./: CMakeLists.txt  README.md  package.xml  readme.md  test_1
include/steel_detection/: yolov8_onnx.h  yolov8_utils.h
launch/: yolo_detect.launch
msg/: steeldetect.msg
src/: steel_detection.cpp  yolov8_onnx.cpp  yolov8_utils.cpp
